# CE583_advanced_dynamics

./: .gitignore  README.md  cyclonedds.xml  pixi.toml
.beads/: metadata.json
docs/: casadi_model.md  controllers.md  simulation.md
reference_code/: inertia.m
scripts/: activate.sh  merge_compile_commands.py
src/phantom_controllers/: CMakeLists.txt  package.xml
src/phantom_controllers/include/phantom_controllers/: base_controller.hpp
src/phantom_controllers/src/: base_controller.cpp  base_controller_node.cpp  gravity_comp_node.cpp
src/phantom_model/: CMakeLists.txt  package.xml
src/phantom_model/config/: phantom_params.yaml  phantom_params_pdf.yaml
src/phantom_model/include/phantom_model/: robot_model.hpp
src/phantom_model/src/: robot_model.cpp
src/phantom_sim/: CMakeLists.txt  package.xml
src/phantom_sim/config/: phantom_params.yaml
src/phantom_sim/include/phantom_sim/: robot_model.hpp
src/phantom_sim/launch/: sim.launch.py
src/phantom_sim/plotjuggler/: joint_states.xml
src/phantom_sim/rviz/: phantom.rviz
src/phantom_sim/src/: gravity_comp_node.cpp  robot_model.cpp  simulator_node.cpp  test_model.cpp
