<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phantom_controllers</name>
  <version>0.1.0</version>
  <description>Controllers for the Phantom robot simulation</description>
  <maintainer email="i_domrachev@kaist.ac.kr">Ivan Domrachev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>phantom_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
