<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phantom_model</name>
  <version>0.1.0</version>
  <description>CasADi dynamics model for the 5-link Phantom robot (no ROS2 dependency)</description>
  <maintainer email="i_domrachev@kaist.ac.kr">Ivan Domrachev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
